<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginStart="@dimen/organizations_left_padding"
            android:maxLines="1" />
        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_marginStart="@dimen/organizations_left_padding"
            android:maxLines="1" />
    </LinearLayout>
    <ImageButton
        android:id="@+id/revoke_button"
        android:background="@null"
        android:scaleType="fitCenter"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:paddingStart="10dp"
        android:layout_alignParentEnd="true"
        android:paddingEnd="@dimen/organizations_left_padding"
        android:src="@drawable/revoke"
        android:contentDescription="@string/revoke" />
    
</RelativeLayout>