...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/title_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textStyle="normal"
                    android:textSize="16sp"
...
            android:layout_alignParentBottom="true"
            android:background="@color/edge">
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/certificates_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/navigation_bar"
        android:visibility="gone"
        />
</RelativeLayout>
...
