<resources>
    <string name="app_name">amv Access Demo</string>
    <string name="revoke_alert_title" formatted="false">revoke certificate for %s?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="unknown_mileage_text">unknown</string>

    <string name="initializing">initializing …</string>
    <string name="broadcasting">broadcasting …</string>
...
